# ticket-purchase

./: .gitignore  README.md  pyproject.toml
damai/: ios_support.py
damai_appium_ios/: __init__.py  config.py  damai_ios.py
tests/: conftest.py
tests/unit/: test_ios_support.py
